// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should shallow form 1`] = `
<Boost(form)
  tagName="form"
>
  <FlexLayout
    alignContent="start"
    alignItems="stretch"
    cursor="inherit"
    direction="column"
    flexWrap="nowrap"
    gap="md"
    grow={false}
    growChildren={false}
    justifyContent="start"
    offestX="none"
    offestY="none"
    stretch={false}
    tagName="div"
  >
    <div />
  </FlexLayout>
</Boost(form)>
`;

exports[`<Form /> should shallow form error 1`] = `
<Boost(formError)
  component="form"
  direction="column"
  tagName="div"
>
  <Row
    gap="md"
  >
    <Icon
      color="DANGER"
      name="Alert"
      size="md"
    />
    <Text
      color="GRAY1"
      ellipsis={false}
      weight="normal"
    >
      Some error
    </Text>
  </Row>
</Boost(formError)>
`;

exports[`<Form /> should shallow form field 1`] = `
<Boost(formField)
  direction="column"
  stretch={true}
  tagName="div"
>
  <Boost(formFieldDirection)
    modifiers={
      Object {
        "direction": "column",
        "stretch": true,
      }
    }
    tagName="div"
  >
    <Boost(formFieldLabel)
      modifiers={
        Object {
          "direction": "column",
          "stretch": true,
        }
      }
      tagName="div"
    >
      Field label
    </Boost(formFieldLabel)>
  </Boost(formFieldDirection)>
</Boost(formField)>
`;

exports[`<Form /> should shallow form section 1`] = `
<FlexLayout
  alignContent="start"
  alignItems="start"
  cursor="inherit"
  direction="column"
  flexWrap="nowrap"
  gap="sm"
  grow={false}
  growChildren={false}
  justifyContent="start"
  offestX="none"
  offestY="none"
  stretch={true}
  tagName="div"
>
  <div />
</FlexLayout>
`;

exports[`<Form /> should shallow form section body 1`] = `
<FlexLayout
  alignContent="start"
  alignItems="stretch"
  cursor="inherit"
  direction="column"
  flexWrap="nowrap"
  gap="md"
  grow={false}
  growChildren={false}
  justifyContent="start"
  offestX="none"
  offestY="none"
  stretch={true}
  tagName="div"
>
  <div />
</FlexLayout>
`;
